cleaned and scaled dataset with code

--- a/dataset_flight/flight_fare.ipynb
+++ b/dataset_flight/flight_fare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 689,
    "id": "8d0a9ed8",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4    16:50         21:35   4h 45m      1 stop         No info         1  "
       ]
      },
-     "execution_count": 665,
+     "execution_count": 689,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 690,
    "id": "bd12c26b",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(13354, 11)"
       ]
      },
-     "execution_count": 666,
+     "execution_count": 690,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 691,
    "id": "dc1aad18",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 692,
    "id": "8423bf8d",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 668,
+     "execution_count": 692,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 693,
    "id": "20f3dd93",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "9039  23h 40m         NaN         No info         1  "
       ]
      },
-     "execution_count": 669,
+     "execution_count": 693,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 694,
    "id": "80d045f6",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "(13354, 10)"
       ]
      },
-     "execution_count": 670,
+     "execution_count": 694,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 695,
    "id": "a2ca9806",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 671,
+     "execution_count": 695,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 696,
    "id": "59768f7f",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 672,
+     "execution_count": 696,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 697,
    "id": "26763987",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 698,
    "id": "1b9fdc06",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "4   4h 45m      1 stop         No info         1  "
       ]
      },
-     "execution_count": 674,
+     "execution_count": 698,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 699,
    "id": "9de59b43",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
        "4      1 stop         No info         1   01    03  2019  "
       ]
      },
-     "execution_count": 675,
+     "execution_count": 699,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 700,
    "id": "69825569",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "4         1   01    03  2019       16         50           21             35  "
       ]
      },
-     "execution_count": 676,
+     "execution_count": 700,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 701,
    "id": "c1375b64",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1054,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 677,
+     "execution_count": 701,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 702,
    "id": "4093c3a5",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 703,
    "id": "8a954e2d",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 679,
+     "execution_count": 703,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 704,
    "id": "9b98cebd",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 705,
    "id": "8acfb31c",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 681,
+     "execution_count": 705,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 706,
    "id": "1a836159",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1377,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 682,
+     "execution_count": 706,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 707,
    "id": "8b1a156e",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1542,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 683,
+     "execution_count": 707,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 708,
    "id": "1137fe48",
    "metadata": {},
    "outputs": [
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 709,
    "id": "38ecb07e",
    "metadata": {},
    "outputs": [
@@ -1602,7 +1602,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 685,
+     "execution_count": 709,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 710,
    "id": "5ae662d7",
    "metadata": {},
    "outputs": [
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 711,
    "id": "04bb40ba",
    "metadata": {},
    "outputs": [
@@ -1858,7 +1858,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 687,
+     "execution_count": 711,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 712,
    "id": "a8a3dba7",
    "metadata": {},
    "outputs": [
@@ -1914,8 +1914,8 @@
     "\n",
     "test_clean_scaled = pd.DataFrame(X_test, columns=test_clean.columns)\n",
     "\n",
-    "train_clean_scaled.to_csv(\"Cleaned_Train.csv\", index=False)\n",
-    "test_clean_scaled.to_csv(\"Cleaned_Test.csv\", index=False)\n",
+    "train_clean_scaled.to_excel(\"Cleaned_Train.xlsx\", index=False)\n",
+    "test_clean_scaled.to_excel(\"Cleaned_Test.xlsx\", index=False)\n",
     "\n",
     "print(\"Cleaned and scaled train/test datasets saved successfully!!\")\n"
    ]
