--- a/dataset_flight/flight_fare.ipynb
+++ b/dataset_flight/flight_fare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "id": "8d0a9ed8",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4    16:50         21:35   4h 45m      1 stop         No info         1  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "bd12c26b",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "(13354, 11)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "id": "dc1aad18",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "8423bf8d",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "20f3dd93",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "9039  23h 40m         NaN         No info         1  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "id": "80d045f6",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "(13354, 10)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "a2ca9806",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "59768f7f",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "26763987",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "id": "1b9fdc06",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "4   4h 45m      1 stop         No info         1  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "9de59b43",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "4      1 stop         No info         1   01    03  2019  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "id": "69825569",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
        "4         1   01    03  2019       16         50           21             35  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "c1375b64",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "id": "4093c3a5",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 74,
    "id": "8a954e2d",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1164,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "id": "9b98cebd",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "id": "8acfb31c",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1370,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "id": "1a836159",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1392,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "id": "8b1a156e",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1558,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "id": "1137fe48",
    "metadata": {},
    "outputs": [
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "id": "38ecb07e",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1620,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "id": "5ae662d7",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "id": "f1ade722",
    "metadata": {},
    "outputs": [
@@ -1877,7 +1877,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "id": "61e5027f",
    "metadata": {},
    "outputs": [],
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "id": "c72e2d63",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2141,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2152,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "id": "21f04be6",
    "metadata": {},
    "outputs": [
@@ -2365,7 +2365,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2376,7 +2376,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
+   "id": "3a086b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10683 entries, 0 to 10682\n",
+      "Data columns (total 33 columns):\n",
+      " #   Column                                     Non-Null Count  Dtype  \n",
+      "---  ------                                     --------------  -----  \n",
+      " 0   Total_Stops                                10683 non-null  float64\n",
+      " 1   Additional_Info                            10683 non-null  float64\n",
+      " 2   Date                                       10683 non-null  float64\n",
+      " 3   Month                                      10683 non-null  float64\n",
+      " 4   Year                                       10683 non-null  float64\n",
+      " 5   Dep_hour                                   10683 non-null  float64\n",
+      " 6   Dep_minute                                 10683 non-null  float64\n",
+      " 7   Arrival_hour                               10683 non-null  float64\n",
+      " 8   Arrival_minute                             10683 non-null  float64\n",
+      " 9   Duration_minutes                           10683 non-null  float64\n",
+      " 10  Airline_Air Asia                           10683 non-null  float64\n",
+      " 11  Airline_Air India                          10683 non-null  float64\n",
+      " 12  Airline_GoAir                              10683 non-null  float64\n",
+      " 13  Airline_IndiGo                             10683 non-null  float64\n",
+      " 14  Airline_Jet Airways                        10683 non-null  float64\n",
+      " 15  Airline_Jet Airways Business               10683 non-null  float64\n",
+      " 16  Airline_Multiple carriers                  10683 non-null  float64\n",
+      " 17  Airline_Multiple carriers Premium economy  10683 non-null  float64\n",
+      " 18  Airline_SpiceJet                           10683 non-null  float64\n",
+      " 19  Airline_Trujet                             10683 non-null  float64\n",
+      " 20  Airline_Vistara                            10683 non-null  float64\n",
+      " 21  Airline_Vistara Premium economy            10683 non-null  float64\n",
+      " 22  Source_Banglore                            10683 non-null  float64\n",
+      " 23  Source_Chennai                             10683 non-null  float64\n",
+      " 24  Source_Delhi                               10683 non-null  float64\n",
+      " 25  Source_Kolkata                             10683 non-null  float64\n",
+      " 26  Source_Mumbai                              10683 non-null  float64\n",
+      " 27  Destination_Banglore                       10683 non-null  float64\n",
+      " 28  Destination_Cochin                         10683 non-null  float64\n",
+      " 29  Destination_Delhi                          10683 non-null  float64\n",
+      " 30  Destination_Hyderabad                      10683 non-null  float64\n",
+      " 31  Destination_Kolkata                        10683 non-null  float64\n",
+      " 32  Destination_New Delhi                      10683 non-null  float64\n",
+      "dtypes: float64(33)\n",
+      "memory usage: 2.7 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "id": "a8a3dba7",
    "metadata": {},
    "outputs": [
@@ -2410,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "id": "5919542c",
    "metadata": {},
    "outputs": [
@@ -2444,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "id": "003e4c45",
    "metadata": {},
    "outputs": [
