--- a/dataset_flight/TEAM15_CODING2.ipynb
+++ b/dataset_flight/TEAM15_CODING2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "id": "8d0a9ed8",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4    16:50         21:35   4h 45m      1 stop         No info         1  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
     "import seaborn as sns\n",
     "\n",
     "#loading training and testing dataset\n",
-    "train_data = pd.read_excel(\"TEAM15_DATASET1(TRAIN).xlsx\")\n",
+    "train_data = pd.read_excel(\"TEAM15_DATASET2(TRAIN).xlsx\")\n",
     "test_data = pd.read_excel(\"TEAM15_DATASET2(TEST).xlsx\")\n",
     "\n",
     "#saving 'price' column in a variable\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "id": "bd12c26b",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "(13354, 11)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "id": "dc1aad18",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 12,
    "id": "8423bf8d",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "id": "20f3dd93",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "9039  23h 40m         NaN         No info         1  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 14,
    "id": "80d045f6",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
        "(13354, 10)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 15,
    "id": "a2ca9806",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 16,
    "id": "59768f7f",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 17,
    "id": "26763987",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 18,
    "id": "1b9fdc06",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "4   4h 45m      1 stop         No info         1  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 19,
    "id": "9de59b43",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
        "4      1 stop         No info         1   01    03  2019  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "id": "69825569",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "4         1   01    03  2019       16         50           21             35  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 21,
    "id": "c1375b64",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 22,
    "id": "4093c3a5",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 23,
    "id": "8a954e2d",
    "metadata": {},
    "outputs": [
@@ -1178,7 +1178,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 24,
    "id": "9b98cebd",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "id": "8acfb31c",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1384,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 26,
    "id": "1a836159",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1406,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 27,
    "id": "8b1a156e",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
        "4               285  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 28,
    "id": "1137fe48",
    "metadata": {},
    "outputs": [
@@ -1593,7 +1593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jishn\\AppData\\Local\\Temp\\ipykernel_22444\\3100553634.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\jishn\\AppData\\Local\\Temp\\ipykernel_764\\3100553634.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 29,
    "id": "38ecb07e",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1634,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 30,
    "id": "5ae662d7",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 31,
    "id": "f1ade722",
    "metadata": {},
    "outputs": [
@@ -1891,7 +1891,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 32,
    "id": "61e5027f",
    "metadata": {},
    "outputs": [],
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 33,
    "id": "c72e2d63",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2155,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 34,
    "id": "21f04be6",
    "metadata": {},
    "outputs": [
@@ -2379,7 +2379,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 35,
    "id": "3a086b2a",
    "metadata": {},
    "outputs": [
@@ -2447,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 36,
    "id": "a8a3dba7",
    "metadata": {},
    "outputs": [
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 37,
    "id": "5919542c",
    "metadata": {},
    "outputs": [
@@ -2515,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 38,
    "id": "003e4c45",
    "metadata": {},
    "outputs": [
@@ -2541,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 39,
    "id": "22a4e712",
    "metadata": {},
    "outputs": [
@@ -2555,7 +2555,7 @@
       "Low       3167\n",
       "High      2896\n",
       "Name: count, dtype: int64\n",
-      "\\n========================================\\n\n",
+      "\n",
       "KNN Classifier model trained successfully!\n"
      ]
     }
@@ -2569,19 +2569,15 @@
     "\n",
     "print(\"Target variable converted to classes:\")\n",
     "print(y_class.value_counts())\n",
-    "print(\"\\\\n\" + \"=\"*40 + \"\\\\n\")\n",
+    "print(\"\")\n",
     "\n",
-    "# Step 2: Import the classifier and split the data for validation\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# We split the preprocessed training data (X_train_df) into a new training set and a validation set.\n",
-    "# This allows us to evaluate the model before using the final test data.\n",
     "X_train, X_val, y_train_class, y_val_class = train_test_split(\n",
-    "    X_train_df, y_class, test_size=0.2, random_state=42, stratify=y_class # stratify ensures balanced classes\n",
+    "    X_train_df, y_class, test_size=0.2, random_state=42, stratify=y_class \n",
     ")\n",
     "\n",
-    "# Step 3: Initialize and train the KNN Classifier\n",
     "knn_classifier = KNeighborsClassifier(n_neighbors=5) # We'll start with K=5\n",
     "knn_classifier.fit(X_train, y_train_class)\n",
     "\n",
@@ -2590,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 40,
    "id": "b7dd7042",
    "metadata": {},
    "outputs": [
@@ -2599,12 +2595,12 @@
      "output_type": "stream",
      "text": [
       "--- Accuracy Score ---\n",
-      "Accuracy: 0.86\\n\n",
+      "Accuracy: 0.86\n",
       "--- Confusion Matrix ---\n",
       "[[485   7  87]\n",
       " [  2 564  68]\n",
       " [ 71  66 787]]\n",
-      "\\n\n",
+      "\n",
       "--- Classification Report ---\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -2626,21 +2622,21 @@
     "y_pred_val = knn_classifier.predict(X_val)\n",
     "\n",
     "print(\"--- Accuracy Score ---\")\n",
-    "print(f\"Accuracy: {accuracy_score(y_val_class, y_pred_val):.2f}\\\\n\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_val_class, y_pred_val):.2f}\")\n",
     "\n",
-    "# 2. Confusion Matrix: Shows correct vs. incorrect predictions for each class\n",
+    "#Confusion Matrix: Shows correct vs. incorrect predictions for each class\n",
     "print(\"--- Confusion Matrix ---\")\n",
     "print(confusion_matrix(y_val_class, y_pred_val))\n",
-    "print(\"\\\\n\")\n",
+    "print(\"\")\n",
     "\n",
-    "# 3. Classification Report: Provides precision, recall, and F1-score\n",
+    "#Classification Report: Provides precision, recall, and F1-score\n",
     "print(\"--- Classification Report ---\")\n",
     "print(classification_report(y_val_class, y_pred_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 41,
    "id": "994378b2",
    "metadata": {},
    "outputs": [
@@ -2661,12 +2657,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# We will test K values from 1 to 39\n",
+    "#We will test K values from 1 to 39\n",
     "k_range = range(1, 40)\n",
     "error_rate = []\n",
     "\n",
     "for i in k_range:\n",
-    "    # Use KNeighborsClassifier\n",
+    "    #Use KNeighborsClassifier\n",
     "    knn = KNeighborsClassifier(n_neighbors=i)\n",
     "    \n",
     "    # Fit the model using the CORRECT training data and CLASSIFIED labels\n",
@@ -2688,14 +2684,6 @@
     "plt.ylabel('Error Rate (1 - Accuracy)')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b48e5d01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
